Bug 162392 - Impress Sidebar 'Animation' deck text overlaps (kf5, win)
Summary: Impress Sidebar 'Animation' deck text overlaps (kf5, win)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords:
: 137131 144767 (view as bug list)
Depends on:
Blocks: Sidebar-UI-UX
  Show dependency treegraph
 
Reported: 2024-08-08 08:14 UTC by Pt_12
Modified: 2024-11-05 17:56 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
parts of the text overlap each other (41.41 KB, image/png)
2024-08-08 08:14 UTC, Pt_12
Details
Sidebar Animation deck at 2.25 DE scaling WDM (Win11) (143.56 KB, image/png)
2024-08-08 17:00 UTC, V Stuart Foote
Details
Sample presentation with animations (20.06 KB, application/vnd.oasis.opendocument.presentation)
2024-08-09 15:09 UTC, Michael Weghorn
Details
Screenshot kf5 with https://gerrit.libreoffice.org/c/core/+/171659 v1, 200% scaling (181.16 KB, image/png)
2024-08-09 15:10 UTC, Michael Weghorn
Details
Screenshot kf5 with https://gerrit.libreoffice.org/c/core/+/171659 v1, 250% scaling (275.37 KB, image/png)
2024-08-09 15:11 UTC, Michael Weghorn
Details
screen shot of patchset 2 using qt6 VCL plugin with scale set to 200% (164.63 KB, image/png)
2024-08-09 21:49 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pt_12 2024-08-08 08:14:21 UTC
Created attachment 195765 [details]
parts of the text overlap each other

Hello.
Noticed a bug in libreoffice impress using VCL kf6.
I use Fedora 40 KDE spin.
But I tried Kubuntu 24.04 live iso.
This bug also exists there.
So, steps to reproduce it.
Create a presentation file.
Add objects to the slide.
Choose an arbitrary animation for each object.
Go to the "animation" tab.
The text describing the object itself intersects with the text describing the way the object appears.
If you restart impress with VCL gtk3, this is not observed on the "animation" tab.
I saw similar bugs 137131 & 144767.
But they are described for Windows.
That's why I created this one.
Comment 1 V Stuart Foote 2024-08-08 16:27:20 UTC
So I can reproduce the overlapping text strings in the SB 'Animation' deck at will on Windows builds simply by adjusting the WDM os/DE text scaling. Will check if simple os/DE scaling does similar. Both bug 137131 and bug 144767 were effectively the same issue just on WDM rather than KDE( kf6) as here.

For OP, what DE scale factor were your Fedora KDE and Kunbuntu working at? Was this a HiDPI display (> ~170dpi)?
Comment 2 V Stuart Foote 2024-08-08 16:29:37 UTC
@Jim, do you see this overlap/scale issue with object name & assigned animation in the Impress 'Animation' deck?
Comment 3 V Stuart Foote 2024-08-08 16:46:39 UTC
So with Windows WDM (Win11) if I increase DE scale to 2.25 (225%) the 'Animation' SB deck object & animation descriptions *are* run together. 

So there is an issue handling DE scaling in SB content panels for some of the vcl backends.

Checked and only saw the 'Shapes' SB deck has noticeable issue of the thumbnails running together--all other decks/panels of the SB seemed fine.
Comment 4 Pt_12 2024-08-08 16:48:56 UTC
(In reply to V Stuart Foote from comment #1)
> For OP, what DE scale factor were your Fedora KDE and Kunbuntu working at?

200%

> Was this a HiDPI display (> ~170dpi)?

4K, but not HiDPI display.

The same parameters - no problem with 
SAL_USE_VCLPLUGIN=gtk3 libreoffice
Thank you for reply.
Comment 5 V Stuart Foote 2024-08-08 17:00:08 UTC
Created attachment 195774 [details]
Sidebar Animation deck at 2.25 DE scaling WDM (Win11)

Issue with win vcl backend.

=-testing-=
Version: 24.2.4.2 (X86_64) / LibreOffice Community
Build ID: 51a6219feb6075d9a4c46691dcfe0cd9c4fff3c2
CPU threads: 8; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 6 Pt_12 2024-08-08 17:58:56 UTC
I've added the necessary information and changed the status back to UNCONFIRMED.
Comment 7 Jim Raykowski 2024-08-08 23:05:32 UTC
(In reply to V Stuart Foote from comment #2)
> @Jim, do you see this overlap/scale issue with object name & assigned
> animation in the Impress 'Animation' deck?

I do when adjusting the text size in the Windows settings Accessibility > Text size.

I've no clue to offer at the moment why this happens.
Comment 8 Jim Raykowski 2024-08-09 05:44:07 UTC
With a bit of poking I was able to remedy the overlap at least when using the Windows VCL backend. It seems to work for the qt6 VCL plugin as well but I don't know how to adjust the text size using Ubuntu like can be done with Windows. The best I could find was to adjust the display scale to 200%. More poking could be done to improve horizontal spacing between the two lines of text when the text size is very large.

Link to patch:
https://gerrit.libreoffice.org/c/core/+/171659
Comment 9 V Stuart Foote 2024-08-09 14:31:54 UTC
@Heiko, Michael--does Jim's approach work on the KDE backends for you?
Comment 10 Michael Weghorn 2024-08-09 15:09:54 UTC
Created attachment 195782 [details]
Sample presentation with animations
Comment 11 Michael Weghorn 2024-08-09 15:10:38 UTC
Created attachment 195783 [details]
Screenshot kf5 with https://gerrit.libreoffice.org/c/core/+/171659 v1, 200% scaling
Comment 12 Michael Weghorn 2024-08-09 15:11:02 UTC
Created attachment 195784 [details]
Screenshot kf5 with https://gerrit.libreoffice.org/c/core/+/171659 v1, 250% scaling
Comment 13 Michael Weghorn 2024-08-09 15:12:47 UTC
(In reply to V Stuart Foote from comment #9)
> @Heiko, Michael--does Jim's approach work on the KDE backends for you?

I've attached 2 screenshots with 200 % and 250 % scaling applied, both with sample file attachment 195782 [details] on Debian testing with KDE Plasma 5 on Wayland and https://gerrit.libreoffice.org/c/core/+/171659 (PS 1) applied.

It's definitely much better than before, but the 2 lines of text can still get pretty close and overlap.
Comment 14 Jim Raykowski 2024-08-09 21:49:09 UTC
Created attachment 195789 [details]
screen shot of patchset 2 using qt6 VCL plugin with scale set to 200%

PS2 isn't the prettiest but seems to do the trick.
Comment 15 V Stuart Foote 2024-08-10 14:25:37 UTC
*** Bug 137131 has been marked as a duplicate of this bug. ***
Comment 16 V Stuart Foote 2024-08-10 14:27:20 UTC
*** Bug 144767 has been marked as a duplicate of this bug. ***
Comment 17 Commit Notification 2024-08-10 21:09:50 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cee67dd7d7348f853066a160eed4618dc4ab52ff

Resolves: tdf#162392 Impress Sidebar 'Animation' deck text overlaps

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Michael Weghorn 2024-08-12 04:27:00 UTC
I can confirm it looks good now with kf5 even with 250% scaling applied. Thanks!

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 59cb37a210675d4269c2fcd48feeffe942538891
CPU threads: 32; OS: Linux 6.10; UI render: default; VCL: kf5 (cairo+wayland)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded
Comment 19 V Stuart Foote 2024-08-12 04:27:47 UTC
Testing TB77 2024-08-11 nightly, the text strings on the 'Animation' deck are spacing out now and scroll bars activating as needed for the 25.2.0 build.

Maybe a good candidate for a back port?

=-testing-=

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2fec61240fed71923e5e2172e8536438df2a2432
CPU threads: 8; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded