Resolves: tdf#162392 Impress Sidebar 'Animation' deck text overlaps

by reworking the custom animation list entry item custom rendering
layout a bit.

Change-Id: I1c71dd5ef40de5369890b0b9aea1294baa3be120
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171659
Tested-by: Jenkins
Reviewed-by: Vernon, Stuart Foote <vsfoote@libreoffice.org>
Reviewed-by: Jim Raykowski <raykowj@gmail.com>